applications/argo-workflows/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-workflows
  annotations:
    addons_domain: placeholder-domain
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: lan-gateway
      namespace: traefik
  hostnames:
    - argo-workflows.placeholder-domain
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: argo-workflows-server
          port: 2746
